@@ -117,35 +117,6 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="textBox1.Text" xml:space="preserve">
-    <value>1.3
-- Russian language version
-- German language version
-- Portuguese (Brasil) language version
-- "Find in Database" command available in the search view
-
-1.2
-- Contagem de arquivo e tamanho do arquivo săo exibidos na barra de status em todos os casos
-- Discos (HDs) externos podem ser indexados
-- Novos comandos em Ajuda
-- Nome alterado para Blue Mirror CD/DVD Indexer
-
-1.1.0.5
-- Problema com informaçăo de Licença consertado
-- Localizaçăo de defeito consertada
-
-1.1 
-- Atualizados detalhes de contato, licença e informaçăo de versăo
-- Versăo em Polonęs
-
-1.0 Beta
-- Pequenos bugs removidos
-- Localizaçăo da base de dados pode ser configurada pelo usuário
-- Exportar base de dados usando formato csv 
-- Novas definiçőes de busca implementedas
-- Adicionados Importar/Exportar
-- Nova caixa Sobre</value>
-  </data>
   <assembly alias="System.Drawing" name="System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="label2.Size" type="System.Drawing.Size, System.Drawing">
     <value>294, 13</value>
