@@ -132,7 +132,14 @@
     <value>171, 16</value>
   </data>
   <data name="textBox1.Text" xml:space="preserve">
-    <value>1.3
+    <value>1.4
+- New column in the list view: File Extension
+- You can store the physical location of CD/DVD
+- Japanese language version
+- Turkish language version
+- Dutch language version
+
+1.3
 - Russian language version
 - German language version
 - Portuguese (Brasil) language version
@@ -160,11 +167,11 @@
 - Import/export added
 - New AboutBox</value>
   </data>
-  <data name="&gt;&gt;tabPage1.Parent" xml:space="preserve">
-    <value>tcAbout</value>
-  </data>
   <data name="&gt;&gt;llTitle.Parent" xml:space="preserve">
     <value>$this</value>
+  </data>
+  <data name="&gt;&gt;textBox2.Parent" xml:space="preserve">
+    <value>tabPage1</value>
   </data>
   <data name="llCopyright.Size" type="System.Drawing.Size, System.Drawing">
     <value>51, 13</value>
@@ -188,8 +195,8 @@
   <data name="llSourceForge.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
     <value>NoControl</value>
   </data>
-  <data name="label2.TabIndex" type="System.Int32, mscorlib">
-    <value>105</value>
+  <data name="label2.AutoSize" type="System.Boolean, mscorlib">
+    <value>True</value>
   </data>
   <data name="$this.AutoScaleDimensions" type="System.Drawing.SizeF, System.Drawing">
     <value>6, 13</value>
@@ -203,8 +210,8 @@
   <data name="textBox2.Multiline" type="System.Boolean, mscorlib">
     <value>True</value>
   </data>
-  <data name="textBox2.Dock" type="System.Windows.Forms.DockStyle, System.Windows.Forms">
-    <value>Fill</value>
+  <data name="&gt;&gt;llCodePlex.Name" xml:space="preserve">
+    <value>llCodePlex</value>
   </data>
   <data name="textBox1.Dock" type="System.Windows.Forms.DockStyle, System.Windows.Forms">
     <value>Fill</value>
@@ -215,11 +222,8 @@
   <data name="&gt;&gt;label2.Name" xml:space="preserve">
     <value>label2</value>
   </data>
-  <data name="tpChangeLog.Padding" type="System.Windows.Forms.Padding, System.Windows.Forms">
-    <value>3, 3, 3, 3</value>
-  </data>
-  <data name="$this.ClientSize" type="System.Drawing.Size, System.Drawing">
-    <value>337, 442</value>
+  <data name="&gt;&gt;llCodePlex.ZOrder" xml:space="preserve">
+    <value>1</value>
   </data>
   <data name="&gt;&gt;textBox2.Name" xml:space="preserve">
     <value>textBox2</value>
@@ -254,8 +258,8 @@
   <data name="textBox1.Size" type="System.Drawing.Size, System.Drawing">
     <value>314, 168</value>
   </data>
-  <data name="&gt;&gt;tabPage1.ZOrder" xml:space="preserve">
-    <value>0</value>
+  <data name="&gt;&gt;tcAbout.Parent" xml:space="preserve">
+    <value>$this</value>
   </data>
   <data name="$this.Text" xml:space="preserve">
     <value>About</value>
@@ -265,6 +269,12 @@
   </data>
   <data name="llCodePlex.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
     <value>NoControl</value>
+  </data>
+  <data name="label3.Size" type="System.Drawing.Size, System.Drawing">
+    <value>52, 13</value>
+  </data>
+  <data name="&gt;&gt;tpChangeLog.Name" xml:space="preserve">
+    <value>tpChangeLog</value>
   </data>
   <data name="llSourceForge.Text" xml:space="preserve">
     <value>http://sourceforge.net/projects/octoindex/</value>
@@ -287,17 +297,14 @@
   <data name="llTitle.Location" type="System.Drawing.Point, System.Drawing">
     <value>12, 9</value>
   </data>
-  <data name="&gt;&gt;llCodePlex.Name" xml:space="preserve">
-    <value>llCodePlex</value>
-  </data>
   <data name="&gt;&gt;textBox1.ZOrder" xml:space="preserve">
     <value>0</value>
   </data>
   <data name="llCodePlex.Size" type="System.Drawing.Size, System.Drawing">
     <value>165, 16</value>
   </data>
-  <data name="&gt;&gt;textBox2.Parent" xml:space="preserve">
-    <value>tabPage1</value>
+  <data name="llCopyright.Location" type="System.Drawing.Point, System.Drawing">
+    <value>12, 42</value>
   </data>
   <data name="llCodePlex.TabIndex" type="System.Int32, mscorlib">
     <value>112</value>
@@ -311,17 +318,11 @@
   <data name="&gt;&gt;linkLabel1.Type" xml:space="preserve">
     <value>System.Windows.Forms.LinkLabel, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <data name="label2.AutoSize" type="System.Boolean, mscorlib">
-    <value>True</value>
-  </data>
   <data name="label2.Location" type="System.Drawing.Point, System.Drawing">
     <value>12, 100</value>
   </data>
   <data name="linkLabel1.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
-  </data>
-  <data name="&gt;&gt;btnCancel.Type" xml:space="preserve">
-    <value>System.Windows.Forms.Button, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="&gt;&gt;llCopyright.ZOrder" xml:space="preserve">
     <value>9</value>
@@ -335,8 +336,8 @@
   <data name="&gt;&gt;tcAbout.Name" xml:space="preserve">
     <value>tcAbout</value>
   </data>
-  <data name="label3.AutoSize" type="System.Boolean, mscorlib">
-    <value>True</value>
+  <data name="&gt;&gt;label2.ZOrder" xml:space="preserve">
+    <value>7</value>
   </data>
   <data name="label2.Text" xml:space="preserve">
     <value>Comments, bugs, feature requests send to:</value>
@@ -359,11 +360,14 @@
   <data name="&gt;&gt;label3.Parent" xml:space="preserve">
     <value>$this</value>
   </data>
-  <data name="&gt;&gt;tpChangeLog.Name" xml:space="preserve">
-    <value>tpChangeLog</value>
+  <data name="&gt;&gt;$this.Type" xml:space="preserve">
+    <value>Octopus.CDIndex.BaseDialogs.FormDialogList, Octopus.CDIndex, Version=1.4.0.0, Culture=neutral, PublicKeyToken=null</value>
   </data>
-  <data name="label3.Size" type="System.Drawing.Size, System.Drawing">
-    <value>52, 13</value>
+  <data name="label2.TabIndex" type="System.Int32, mscorlib">
+    <value>105</value>
+  </data>
+  <data name="&gt;&gt;btnCancel.Type" xml:space="preserve">
+    <value>System.Windows.Forms.Button, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="&gt;&gt;llVersion.Name" xml:space="preserve">
     <value>llVersion</value>
@@ -380,14 +384,17 @@
   <data name="llSourceForge.Size" type="System.Drawing.Size, System.Drawing">
     <value>210, 16</value>
   </data>
-  <data name="llVersion.Size" type="System.Drawing.Size, System.Drawing">
-    <value>62, 13</value>
+  <data name="llTitle.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
+    <value>NoControl</value>
   </data>
-  <data name="&gt;&gt;label2.ZOrder" xml:space="preserve">
-    <value>7</value>
+  <data name="tcAbout.Size" type="System.Drawing.Size, System.Drawing">
+    <value>328, 200</value>
   </data>
-  <data name="&gt;&gt;tcAbout.Parent" xml:space="preserve">
+  <data name="&gt;&gt;label2.Parent" xml:space="preserve">
     <value>$this</value>
+  </data>
+  <data name="tpChangeLog.Padding" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>3, 3, 3, 3</value>
   </data>
   <data name="llVersion.TabIndex" type="System.Int32, mscorlib">
     <value>109</value>
@@ -395,8 +402,8 @@
   <data name="&gt;&gt;tpChangeLog.Type" xml:space="preserve">
     <value>System.Windows.Forms.TabPage, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <data name="&gt;&gt;llVersion.Parent" xml:space="preserve">
-    <value>$this</value>
+  <data name="llVersion.Size" type="System.Drawing.Size, System.Drawing">
+    <value>62, 13</value>
   </data>
   <data name="tpChangeLog.Location" type="System.Drawing.Point, System.Drawing">
     <value>4, 22</value>
@@ -407,8 +414,8 @@
   <data name="&gt;&gt;label3.Name" xml:space="preserve">
     <value>label3</value>
   </data>
-  <data name="&gt;&gt;textBox1.Parent" xml:space="preserve">
-    <value>tpChangeLog</value>
+  <data name="&gt;&gt;tabPage1.ZOrder" xml:space="preserve">
+    <value>0</value>
   </data>
   <data name="&gt;&gt;llVersion.Type" xml:space="preserve">
     <value>System.Windows.Forms.Label, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
@@ -416,14 +423,14 @@
   <data name="panel1.Location" type="System.Drawing.Point, System.Drawing">
     <value>15, 25</value>
   </data>
-  <data name="tcAbout.Size" type="System.Drawing.Size, System.Drawing">
-    <value>328, 200</value>
+  <data name="textBox2.Font" type="System.Drawing.Font, System.Drawing">
+    <value>Microsoft Sans Serif, 10pt</value>
   </data>
   <data name="&gt;&gt;linkLabel1.ZOrder" xml:space="preserve">
     <value>8</value>
   </data>
-  <data name="&gt;&gt;$this.Name" xml:space="preserve">
-    <value>DlgAbout</value>
+  <data name="&gt;&gt;tabPage1.Parent" xml:space="preserve">
+    <value>tcAbout</value>
   </data>
   <data name="panel1.TabIndex" type="System.Int32, mscorlib">
     <value>110</value>
@@ -434,17 +441,23 @@
   <data name="&gt;&gt;llCodePlex.Parent" xml:space="preserve">
     <value>$this</value>
   </data>
-  <data name="&gt;&gt;$this.Type" xml:space="preserve">
-    <value>Octopus.CDIndex.BaseDialogs.FormDialogList, Octopus.CDIndex, Version=1.3.0.3, Culture=neutral, PublicKeyToken=null</value>
-  </data>
   <data name="&gt;&gt;linkLabel1.Parent" xml:space="preserve">
     <value>$this</value>
+  </data>
+  <data name="&gt;&gt;textBox1.Parent" xml:space="preserve">
+    <value>tpChangeLog</value>
+  </data>
+  <data name="&gt;&gt;$this.Name" xml:space="preserve">
+    <value>DlgAbout</value>
   </data>
   <data name="linkLabel1.TabIndex" type="System.Int32, mscorlib">
     <value>106</value>
   </data>
-  <data name="&gt;&gt;llCodePlex.ZOrder" xml:space="preserve">
-    <value>1</value>
+  <data name="$this.ClientSize" type="System.Drawing.Size, System.Drawing">
+    <value>337, 442</value>
+  </data>
+  <data name="textBox2.Dock" type="System.Windows.Forms.DockStyle, System.Windows.Forms">
+    <value>Fill</value>
   </data>
   <data name="linkLabel1.Text" xml:space="preserve">
     <value>kowaliszyn@users.sourceforge.net</value>
@@ -454,6 +467,9 @@
   </data>
   <data name="llVersion.Text" xml:space="preserve">
     <value>Version: {0}</value>
+  </data>
+  <data name="textBox1.ScrollBars" type="System.Windows.Forms.ScrollBars, System.Windows.Forms">
+    <value>Both</value>
   </data>
   <data name="llCodePlex.Location" type="System.Drawing.Point, System.Drawing">
     <value>12, 156</value>
@@ -473,8 +489,8 @@
   <data name="tpChangeLog.Text" xml:space="preserve">
     <value>Change Log</value>
   </data>
-  <data name="&gt;&gt;tabPage1.Type" xml:space="preserve">
-    <value>System.Windows.Forms.TabPage, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  <data name="tcAbout.TabIndex" type="System.Int32, mscorlib">
+    <value>113</value>
   </data>
   <data name="tabPage1.Padding" type="System.Windows.Forms.Padding, System.Windows.Forms">
     <value>3, 3, 3, 3</value>
@@ -482,11 +498,8 @@
   <data name="linkLabel1.Location" type="System.Drawing.Point, System.Drawing">
     <value>12, 113</value>
   </data>
-  <data name="textBox1.ScrollBars" type="System.Windows.Forms.ScrollBars, System.Windows.Forms">
-    <value>Both</value>
-  </data>
-  <data name="&gt;&gt;llCopyright.Type" xml:space="preserve">
-    <value>System.Windows.Forms.Label, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  <data name="label3.Location" type="System.Drawing.Point, System.Drawing">
+    <value>12, 143</value>
   </data>
   <data name="llVersion.Location" type="System.Drawing.Point, System.Drawing">
     <value>12, 65</value>
@@ -494,26 +507,17 @@
   <data name="&gt;&gt;llCopyright.Name" xml:space="preserve">
     <value>llCopyright</value>
   </data>
-  <data name="llTitle.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
-    <value>NoControl</value>
-  </data>
   <data name="llCodePlex.Padding" type="System.Windows.Forms.Padding, System.Windows.Forms">
     <value>0, 3, 0, 0</value>
-  </data>
-  <data name="textBox2.Font" type="System.Drawing.Font, System.Drawing">
-    <value>Microsoft Sans Serif, 10pt</value>
   </data>
   <data name="&gt;&gt;llSourceForge.Name" xml:space="preserve">
     <value>llSourceForge</value>
   </data>
-  <data name="llCopyright.Location" type="System.Drawing.Point, System.Drawing">
-    <value>12, 42</value>
+  <data name="&gt;&gt;tabPage1.Type" xml:space="preserve">
+    <value>System.Windows.Forms.TabPage, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <data name="label3.Location" type="System.Drawing.Point, System.Drawing">
-    <value>12, 143</value>
-  </data>
-  <data name="&gt;&gt;label2.Parent" xml:space="preserve">
-    <value>$this</value>
+  <data name="&gt;&gt;llCopyright.Type" xml:space="preserve">
+    <value>System.Windows.Forms.Label, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="llSourceForge.Padding" type="System.Windows.Forms.Padding, System.Windows.Forms">
     <value>0, 3, 0, 0</value>
@@ -541,6 +545,9 @@
   </data>
   <data name="llSourceForge.Location" type="System.Drawing.Point, System.Drawing">
     <value>12, 172</value>
+  </data>
+  <data name="label3.AutoSize" type="System.Boolean, mscorlib">
+    <value>True</value>
   </data>
   <data name="&gt;&gt;btnCancel.ZOrder" xml:space="preserve">
     <value>10</value>
@@ -580,6 +587,7 @@
 
 Dutch: Filip Cornelissen
 German: Clemens-Alexander Brust
+Japanese: TILT
 Polish: Roman Kowaliszyn
 Portuguese (Brasil): Leonardo Frigo Da Purificação
 Russian: Boris Vasilenko
@@ -588,8 +596,8 @@ Turkish: Polat Pinar</value>
   <data name="label2.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
     <value>NoControl</value>
   </data>
-  <data name="tcAbout.TabIndex" type="System.Int32, mscorlib">
-    <value>113</value>
+  <data name="&gt;&gt;llVersion.Parent" xml:space="preserve">
+    <value>$this</value>
   </data>
   <data name="&gt;&gt;btnCancel.Name" xml:space="preserve">
     <value>btnCancel</value>
@@ -601,6 +609,6 @@ Turkish: Polat Pinar</value>
     <value>True</value>
   </metadata>
   <metadata name="$this.Language" type="System.Globalization.CultureInfo, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>Dutch</value>
+    <value>Polish</value>
   </metadata>
 </root>
